# packages/server/internal/core/domain/models/user.go
@@ -11,10 +11,11 @@ type User struct {
 	ProfilePicture  string `json:"profilePictureUrl"`
 	IsGoogleAccount bool   `json:"isGoogleAccount"`
 
-	Songs       []Song         `gorm:"foreignKey:UserID;constraint:OnDelete:CASCADE"`
-	Collections []Collection   `gorm:"foreignKey:UserID;constraint:OnDelete:CASCADE"`
-	Comments    []Comment      `gorm:"foreignKey:UserID;constraint:OnDelete:CASCADE"`
-	Reactions   []UserReaction `gorm:"foreignKey:UserID;constraint:OnDelete:CASCADE"`
+	Songs           []Song           `gorm:"foreignKey:UserID;constraint:OnDelete:CASCADE"`
+	Comments        []Comment        `gorm:"foreignKey:UserID;constraint:OnDelete:CASCADE"`
+	Collections     []Collection     `gorm:"foreignKey:UserID;constraint:OnDelete:CASCADE"`
+	Reactions       []UserReaction   `gorm:"foreignKey:UserID;constraint:OnDelete:CASCADE"`
+	UserCollections []UserCollection `gorm:"foreignKey:UserID;constraint:OnDelete:CASCADE"`
 
 	Chats1   []Chat    `gorm:"foreignKey:UserID1;references:ID" json:"chats1"`
 	Chats2   []Chat    `gorm:"foreignKey:UserID2;references:ID" json:"chats2"`
